[gd_scene load_steps=2 format=3 uid="uid://bmf16fu5mpkgh"]

[ext_resource type="Script" path="res://hud/hud.gd" id="1_ba5xa"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_ba5xa")

[node name="loot_display" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -474.0
offset_top = -263.0
offset_right = -371.0
offset_bottom = -239.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "LOOT: 1500"

[node name="ammo_display" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 376.0
offset_top = -263.0
offset_right = 479.0
offset_bottom = -239.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Ammo:"

[node name="clip_display" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 376.0
offset_top = -239.0
offset_right = 479.0
offset_bottom = -215.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Clip:"
